[package]
name = "coderaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.*"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[lints.rust]
future-incompatible = "warn"
rust-2024-compatibility = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
restriction = "warn"
nursery = "warn"
cargo = "warn"
separated_literal_suffix = "allow"
implicit_return = "allow"
bool_assert_comparison = "allow"
suboptimal_flops = "allow"
semicolon_outside_block = "allow"
