[package]
name = "coderaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.*"
derive_more = "*"
itertools = "*"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[lints.rust]
future-incompatible = "warn"
# rust-2024-compatibility = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
# restriction = "warn"
nursery = "warn"
# cargo = "warn"
# separated_literal_suffix = "allow"
# implicit_return = "allow"
# bool_assert_comparison = "allow"
# suboptimal_flops = "allow"
# semicolon_outside_block = "allow"
# single_call_fn = { level = "allow", priority = 1 }  # restriction
# implicit_return = { level = "allow", priority = 1 }  # restriction
# arithmetic-side-effects = "allow"  # restriction
unwrap-used = "warn"
non_ascii_literal = "warn"

# For Prototyping only
missing-docs-in-private-items = "allow"
